name:                hoard
version:             0.6.2.1
synopsis:            Imageboard in Haskell (Happstack/Hamlet)
description:         Please see README.md
homepage:            https://github.com/StanislavKlenin/hoard
license:             BSD3
license-file:        LICENSE
author:              Stanislav Klenin
maintainer:          stanislav.klenin@gmail.com
copyright:           2016 Stanislav Klenin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Messages, Render,  Routes,  Sitemap,  Storage
  other-extensions:    QuasiQuotes
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , TemplateHaskell
                     , TypeOperators
  build-depends:       base >= 4.7 && < 5
                     , text
                     , time >=1.5
                     , safecopy
                     , ixset >=1.0.6
                     , happstack-server
                     , acid-state >=0.13.1
                     , shakespeare >=2.0.7
                     , boomerang
                     , web-routes >=0.27.9
                     , web-routes-happstack >=0.23.9
                     , web-routes-th
                     , web-routes-boomerang >=0.28.4
                     , mtl
                     , directory
                     , filepath
                     , system-filepath
                     , syb
                     , gd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable hoard-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , hoard
                     , acid-state >=0.13.1
                     , shakespeare >=2.0.7
                     , configurator
                     , happstack-server
                     , web-routes >=0.27.9
                     , web-routes-happstack >=0.23.9
  default-language:    Haskell2010

test-suite hoard-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hoard
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/StanislavKlenin/hoard
